--- a/prodlist/src/App.css
+++ b/prodlist/src/App.css
@@ -1,7 +1,27 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
+body {
+    font-family: 'Roboto', sans-serif;
+    background-color: #121212;
+    color: white;
+}
+
+
 .home {
+    
+    padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: #212121;
+    width: 400px;
+    border-radius: 8px;
+    margin: auto;
+    margin-top: 100px;
+}
+
+.home h2 {
+    margin-top: 0;
 }
 
 .create_form input {
@@ -9,25 +29,34 @@
     padding: 10px;
     border-bottom: 2px solid;
     outline: none;
+    border: none;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    background-color: #424242;
+    color: white;
 }
 
 .create_form button {
     padding: 10px;
-    background-color: black;
+    background-color:#326cfc ;
     color: white;
     cursor: pointer;
+    border: none;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
 }
 
 .task {
  display: flex;
  align-items: center;
- width: 345px;
+ width: 380px;
  justify-content: space-between;
- background-color: black;
+ background-color: #38d152;
  color: white;
  height: 35px;
  padding: 2px 5px 2px 5px;
- margin-top: 5px;   
+ margin-top: 10px;
+ border-radius: 6px;
 }
 
 .checkbox {
